Добавлен обработчик GetTasks
